# jdi_lvgl_ai_prj

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h  espressif.c  kabi_gif.c  kabi_img.c  liuhua.c  lv_font_dengxian_12_user.c  lv_font_misans_normal_12_user.c  lv_font_opposans_r_12_user.c  lv_font_youyuan_12_user.c  maomao.c  ui.c  ui.h  ui_def.h  ui_msgbox1.c  ui_screen1.c  ui_screen1.h  ui_screen2.c  ui_screen2.h
main/hardware/buzzer/: buzzer.c  buzzer.h
main/hardware/encoder/: encoder.c  encoder.h
main/hardware/lcd/: JDI_LPM009M360A.c  JDI_LPM009M360A.h
main/hardware/lcd/Vernon_LPM009M360A/: Vernon_LPM009M360A.c
main/hardware/led/: bsp_led.c  bsp_led.h
