idf_component_register(SRCS "main.c"
                            "hardware/led/bsp_led.c"
                            "hardware/lcd/JDI_LPM009M360A.c"
                            "hardware/lcd/Vernon_LPM009M360A/Vernon_LPM009M360A.c"
                            "hardware/encoder/encoder.c"
                            "hardware/buzzer/buzzer.c"
                            "LVGL_Driver/LVGL_Driver.c"
                            "LVGL_Driver/ui.c"
                            "LVGL_Driver/ui_screen1.c"
                            "LVGL_Driver/ui_screen2.c"
                            "LVGL_Driver/ui_msgbox1.c"
                            "LVGL_Driver/maomao.c"
                            "LVGL_Driver/liuhua.c"
                            "LVGL_Driver/kabi_img.c"
                            "LVGL_Driver/kabi_gif.c"
                            "LVGL_Driver/espressif.c"
                            "LVGL_Driver/lv_font_youyuan_12_user.c"
                            "LVGL_Driver/lv_font_misans_normal_12_user.c"
                            "LVGL_Driver/lv_font_dengxian_12_user.c"
                            "LVGL_Driver/lv_font_opposans_r_12_user.c"
                    INCLUDE_DIRS "."
                                 "./hardware/led"
                                 "./hardware/lcd"
                                 "./hardware/lcd/Vernon_LPM009M360A"
                                 "./hardware/encoder"
                                 "./hardware/buzzer"
                                 "./LVGL_Driver"     
                    )